--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <img class="logo_nav" src="./imagens/logo.webp" alt="" draggable="false">
         <ul id="menu">
             <li style="padding-bottom: 0.850rem;border-bottom-style: solid;border-bottom-width: 0.200rem;border-bottom-color: #FBD316;">HOME</li>
-            <li>CAMISETAS</li>
-            <li>MOLETONS</li>
-            <li>BERMUDAS</li>
-            <li><img class="icone_menu" src="./imagens/user.ico" alt="" draggable="false"></li>
+            <li><a href="./camisetas.html">CAMISETAS</a></li>
+            <li><a href="./moletons.html">MOLETONS</a></li>
+            <li><a href="./bermudas.html">BERMUDAS</a></li>
+            <li><a href="./login.html"><img class="icone_menu" src="./imagens/user.ico" alt="" draggable="false"></a></li>
             <li><img class="icone_menu" src="./imagens/shopping-cart.ico" alt="" draggable="false"></li>
             <li><img class="icone_menu" src="./imagens/lupa.ico" alt="" draggable="false"></li>
         </ul>
@@ -48,19 +48,25 @@
     <div id="produtos">
         <!-- Camiseta -->
         <div class="sub_titulo_img">
+            <a href="./camisetas.html">
             <img src="./imagens/index/camiseta1.webp" alt="" draggable="false">
+            </a>
             <p>CAMISETAS</p>
         </div>
 
         <!-- Bermuda -->
         <div class="sub_titulo_img">
+            <a href="./bermudas.html">
             <img src="./imagens/index/bermuda1.webp" alt="" draggable="false">
+            </a>
             <p>BERMUDAS</p>
         </div>
 
         <!-- Moletom -->
         <div class="sub_titulo_img">
+            <a href="./moletons.html">
             <img src="./imagens/index/moletom1.webp" alt="" draggable="false">
+            </a>
             <p>MOLETONS</p>
         </div>
     </div>
@@ -74,7 +80,7 @@
     <div id="favoritos">
         <!-- Camiseta -->
         <div class="titulo_img">
-            <img src="./imagens/index/camiseta4.webp" alt="" draggable="false">
+            <img src="./imagens/index/camiseta2.webp" alt="" draggable="false">
             <p>
                 <span class="nome_produto">Camiseta Deidara Branca</span>
                 <br><img class="avaliacao" src="./imagens/index/estrelas.png" alt="" draggable="false">
