--- a/dados_pessoais_editar.html
+++ b/dados_pessoais_editar.html
@@ -27,7 +27,7 @@
     </nav>
 
     <div id="conteudo">
-        <h1>Endereço</h1>
+        <h1>Dados Pessoais</h1>
         <form action="/dados_pessoais_editar" method="post">
             <label for="nome">Nome Completo</label>
             <input class="inputs" type="text" id="nome" name="nome" placeholder="" required>
